--- a/ark_pro/package.json
+++ b/ark_pro/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ark_pro",
   "version": "0.1.0",
+  "homepage": "https://jiangxin-max.github.io/ARK_Advanced",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy":"gh-pages -d build",
+    "predeploy":"npm run build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -23,6 +26,7 @@
     "babel-loader": "7.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "gh-pages": "^3.2.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
